# raggenie

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  config.yaml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.py  zitadel-docker-compose.yaml
.github/workflows/: static.yml
app/: __init__.py  main.py
app/api/v1/: auth.py  commons.py  connector.py  llmchat.py  main_router.py  provider.py  test.http
app/base/: abstract_handlers.py  base_formatter.py  base_llm.py  base_plugin.py  base_vectordb.py  document_data_plugin.py  loader_metadata_mixin.py  messaging_plugin.py  model_loader.py  plugin_metadata_mixin.py  query_plugin.py  remote_data_plugin.py
app/chain/chains/: capability_chain.py  chain.py  general_chain.py  intent_chain.py  metadata_chain.py  query_chain.py  rag_chain.py
app/chain/formatter/: general_response.py
app/chain/modules/: cache_checker.py  cache_updater.py  context_retreiver.py  context_storage.py  document_retriever.py  executer.py  follow_up_handler.py  followup_interpreter.py  general_answer_generator.py  generator.py  input_formatter.py  intent_extracter.py  intent_history_checker.py  metadata_generator.py  metadata_ragfilter.py  ouput_formatter.py  post_processor.py  prompt_generator.py  rag_module.py  router.py  samples_retriever.py  schema_retriever.py  validator.py
app/embeddings/: base.py  chroma_default.py  cohere.py  default.py  google.py  loader.py  onnx.py
app/embeddings/cohere/: __init__.py  handler.py
app/embeddings/default/: chroma_default.py  default.py  onnx.py
app/embeddings/google/: __init__.py  handler.py
app/embeddings/openai/: __init__.py  handler.py
app/loaders/: base_loader.py
app/loaders/ai71/: __init__.py  loader.py
app/loaders/ollama/: __init__.py  loader.py
app/loaders/openai/: __init__.py  loader.py
app/loaders/togethor/: __init__.py  loader.py
app/models/: connector.py  db.py  environment.py  llmchat.py  prompt.py  provider.py  request.py  user.py
app/plugins/: loader.py
app/plugins/airtable/: __init__.py  formatter.py  handler.py
app/plugins/bigquery/: __init__.py  formatter.py  handler.py
app/plugins/csv/: __init__.py  formatter.py  handler.py
app/plugins/document/: __init__.py  formatter.py  handler.py
app/plugins/google_drive/: __init__.py  handler.py
app/providers/: cache_manager.py  clustering.py  config.py  container.py  context_storage.py  data_preperation.py  middleware.py  reranker.py  vector_store.py  zitadel.py
app/readers/: base_reader.py  docs_reader.py  docx_reader.py  pdf_reader.py  text_reader.py  url_reader.py  yaml_reader.py
app/repository/: connector.py  environment.py  llmchat.py  provider.py  user.py
app/schemas/: common.py  connector.py  environment.py  llmchat.py  provider.py  user.py
app/services/: connector.py  connector_details.py  environment.py  llmchat.py  model_reader.py  provider.py  user.py
app/tests/: conftest.py
app/utils/: authlogin.py  database.py  jwt.py  module_reader.py  parser.py  read_config.py
app/vectordb/: atlas_mongodb.py  chromadb.py  loader.py
chroma/: chroma.sqlite3
chromadb/: chroma.sqlite3
commands/: cli.py  llm.py
documents/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
documents/docs/: Configuring agents.md  Examples.md  LLM Inferences.md  Prerequesites.md
tests/: README.md  conftest.py
tests/functional/: test_connectors.py  test_provider.py
tests/integration/: test_integration_connector.py
ui/: .dockerignore  .env.example  Dockerfile  README.md  eslint.config.js  index.html  jsconfig.json  nginx.conf  package-lock.json  package.json  vite.config.js  vite.library.config.js
ui/src/: App.jsx  global.css  main.jsx  main.test.js
(+196 files in other folders)
